--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
             <option value="30m">30m</option>
             <option value="1h">1h</option>
           </select>
+          <select class="select-box" name="select-timeframe">
+            <option value="1m">1m</option>
+            <option value="5m">5m</option>
+            <option value="10m">10m</option>
+            <option value="15m">15m</option>
+            <option value="30m">30m</option>
+            <option value="1h">1h</option>
+          </select>
           <button class="next-btn" onclick="toNext(2)">Next >></button>
         </div>
         <div class="choose-indicator hide">
